Adding first file

--- a/src/app/auth/user-profile/user-profile.component.html
+++ b/src/app/auth/user-profile/user-profile.component.html
@@ -2,10 +2,19 @@
     <div class="row">
         <div class="inner-main">
             <h2 class="mb-4">User Profile</h2>
-            <p><strong>Name:</strong> {{this.currentUser.name}}</p>
+            <p><strong>title:</strong> {{this.currentUser.title}}</p>
+            <p><strong>gender:</strong> {{this.currentUser.gender}}</p>
+            <p><strong>firstName:</strong> {{this.currentUser.name}}</p>
+            <p><strong>otherNames:</strong> {{this.currentUser.otherNames}}</p>
+            <p><strong>terms:</strong> {{this.currentUser.terms}}</p>
+            <p><strong>role:</strong> {{this.currentUser.role}}</p>
+            <p><strong>physicalAddress:</strong> {{this.currentUser.physicalAddress}}</p>
+            <p><strong>phoneNumber:</strong> {{this.currentUser.phoneNumber}}</p>
+            <p><strong>dob:</strong> {{this.currentUser.dob}}</p>
             <p><strong>Email:</strong> {{this.currentUser.email}}</p>
            
             <p><strong>Password:</strong> {{this.currentUser.password}}</p>
         </div>
     </div>
 </div>
+
