--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,18 +1,144 @@
-<div class="container mat-elevation z8">
-    <form class="form-signin" [formGroup]="signupForm" (ngSubmit)="registerUser()">
-        <h3 class="h3 mb-3 font-weight-normal text-center">Please sign up</h3>
-        <div class="form-group">
-            <label>Name</label>
-            <input type="text" class="form-control" formControlName="name" placeholder="Enter name" required>
+        <div class="card m-3">
+            <h5 class="card-header">Please fill your in details</h5>
+            <div class="p-3 mb-2 bg-success text-dark">
+            <div class="card-body">
+                <form [formGroup]="signupForm" (ngSubmit)="signUp()">
+                    
+                    <div class="form-row">
+
+                        <div class="form-group col">
+                            <label>ID</label>
+                            <input type="_id" class="form-control" formControlName="_id" placeholder="Enter ID" required>
+                        </div>
+
+
+                        <div class="form-group col">
+                            <label>Gender</label>
+                              <select formControlName="gender" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.title.errors }">
+                                  <option value=""></option>
+                                  <option value="Male">Male</option>
+                                  <option value="Female">Female</option>
+                             </select>
+                        </div>
+
+
+                        <div class="form-group col">
+                              <label>Title</label>
+                                <select formControlName="title" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.title.errors }">
+                                    <option value=""></option>
+                                    <option value="Mr">Mr</option>
+                                    <option value="Mrs">Mrs</option>
+                                    <option value="Miss">Miss</option>
+                                    <option value="Ms">Ms</option>
+                                </select>
+                                <div *ngIf="submitted && f.title.errors" class="invalid-feedback">
+                                    <div *ngIf="f.title.errors.required">Title is required</div>
+                                </div>
+                            </div>
+                            <div class="form-group col">
+                            <label>Role</label>
+                            <select formControlName="role" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.role.errors }">
+                                <option value=""></option>
+                                <option value="SuperAdmin">SuperAdmin</option>
+                                <option value="Customer">Customer</option>
+                                <option value="Tenant">Tenant</option>
+                                <option value="Manager">Manager</option>
+                            </select>
+                            <div *ngIf="submitted && f.role.errors" class="invalid-feedback">
+                                <div *ngIf="f.role.errors.required">role is required</div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="form-row">
+
+                        <div class="form-group col-6">
+                            <label>First Name</label>
+                            <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
+                            <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+                                <div *ngIf="f.name.errors.required">First Name is required</div>
+                            </div>
+                        </div>
+                        <div class="form-group col-6">
+                            <label>Other Names</label>
+                            <input type="text" formControlName="otherNames" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.otherNames.errors }" />
+                            <div *ngIf="submitted && f.otherNames.errors" class="invalid-feedback">
+                                <div *ngIf="f.otherNames.errors.required">Other Names are required</div>
+                            </div>
+                        </div>
+                        
+                       
+        
+                    </div>
+        
+                    <div class="form-row">
+                        <div class="form-group col-6">
+                            <label>Phone Number</label>
+                            <input type="number" formControlName="phoneNumber" class="form-control"
+                             [ngClass]="{ 'is-invalid': submitted && f.phoneNumber.errors }" placeholder="eg. +254702640433" />
+                            <div *ngIf="submitted && f.phoneNumber.errors" class="invalid-feedback">
+                                <div *ngIf="f.phoneNumber.errors.required">Phone Number is required</div>
+                                <div *ngIf="f.phoneNumber.errors.pattern">Phone Number must be 10 digits</div>
+                             
+                            </div>
+                        </div>
+                        <div class="form-group col-6">
+                            <label>Pysical Address</label>
+                            <input type="text" formControlName="physicalAddress" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.physicalAddress.errors }" />
+                            <div *ngIf="submitted && f.physicalAddress.errors" class="invalid-feedback">
+                                <div *ngIf="f.physicalAddress.errors.required">Physical Address is required</div>
+                            </div>
+                        </div>
+        
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col">
+                            <label>Date of Birth</label>
+                            <input type="date" formControlName="dob" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.dob.errors }" />
+                            <div *ngIf="submitted && f.dob.errors" class="invalid-feedback">
+                                <div *ngIf="f.dob.errors.required">Date of Birth is required</div>
+                                <div *ngIf="f.dob.errors.pattern">Date of Birth must be a valid date in the format YYYY-MM-DD</div>
+                            </div>
+                        </div>
+                        <div class="form-group col">
+                            <label>Email</label>
+                            <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+                            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                                <div *ngIf="f.email.errors.required">Email is required</div>
+                                <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col">
+                            <label>Password</label>
+                            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                                <div *ngIf="f.password.errors.required">Password is required</div>
+                                <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+                            </div>
+                        </div>
+                        <div class="form-group col">
+                            <label>Confirm Password</label>
+                            <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
+                            <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
+                                <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
+                                <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group form-check">
+                        <input type="checkbox" formControlName="terms" id="terms" class="form-check-input" [ngClass]="{ 'is-invalid': submitted && f.terms.errors }" />
+                        <label for="terms" class="form-check-label">Accept Terms & Conditions</label>
+                        <div *ngIf="submitted && f.terms.errors" class="invalid-feedback">Accept Ts & Cs is required</div>
+                    </div>
+                    <div class="text-center">
+                        <button class="btn btn-primary mr-1">Register</button>
+                        <button class="btn btn-secondary" type="reset" (click)="onReset()">Cancel</button>
+                    </div>
+                </form>
+            </div>
+
         </div>
-        <div class="form-group">
-            <label>Email address</label>
-            <input type="email" class="form-control" formControlName="email" placeholder="Enter email" required>
         </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" formControlName="password" placeholder="Password" required>
-        </div>
-        <button type="submit" class="btn btn-block btn-primary">Sign up</button>
-    </form>
-</div>
